--- a/prepare/back/package.json
+++ b/prepare/back/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.21.6",
     "sequelize-cli": "^6.4.1"
   },
